fix(provider/kubernetes): manifest textarea clipped (#5389)

--- a/app/scripts/modules/kubernetes/src/v2/manifest/wizard/manifestEntry.less
+++ b/app/scripts/modules/kubernetes/src/v2/manifest/wizard/manifestEntry.less
@@ -1,3 +1,7 @@
+.form-horizontal .form-group.kubernetes-manifest-entry-container {
+  margin: 0;
+}
+
 .kubernetes-manifest-entry {
   resize: vertical;
 }
